# madness_survivor

./: README.md  pyproject.toml
data/: games.csv  teams.csv  used_teams.csv
madness_survivor/: __init__.py  cli.py  field_simulator.py  io_utils.py  logger.py  models.py  planner.py  simulator.py
madness_survivor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
